--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Adding additional files.
+climate_analysis.ipynb
+hawaii.sqlite
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
